# ChangeLog for net-misc/ttytter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Nov 2009; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild:
  Fixing broken dependency specification

*ttytter-0.9.7 (08 Sep 2009)

  08 Sep 2009; Anna Gabutero <amdg@lavabit.com> +ttytter-0.9.7.ebuild:
  Initial commit