@@ -1,5 +1,6 @@
 DIST 097.txt 91745 RMD160 99c92d84297fcbd4d9ef80d12da14fcf00746723 SHA1 65200fc8c428027193509990ab2c395b494defa7 SHA256 d8e9786e795e5fa3ec752ef8091c91c5aa28a64543061022ca8d1c1aa28f3e60
 DIST ttytter.txt 92806 RMD160 708c6452e3df4d4bb4f7a157f8bdf128857b8715 SHA1 f0115e6fcf739bc01ff5e4ede9eb0f23aa51b910 SHA256 6d33f869252aeed3e8aee8c5ea7e9880376e37c33a76c8b03af22114966cf635
-EBUILD ttytter-0.9.7.ebuild 590 RMD160 737eb32f363cbbd55869b3cd8e7cf363140eaad2 SHA1 64a5d33740a3b287871cc13eb4a51b6e191892a8 SHA256 160a87379d1246b5fa0298375ea9c32e089f6be689e3f5461ee7b94cf5cfa3c7
-EBUILD ttytter-0.9.9.ebuild 654 RMD160 09d4d5d9e5c3dfbb0e481985b356f0eb19638bc6 SHA1 85b4c4819b9783f6c42ef0057934e43d958bcfd8 SHA256 3e549f7d2e3d8fe4e342365fe504cb6dbb98bab4a9c07b756612429501dcffd3
-MISC ChangeLog 235 RMD160 7ce4592aba33920715316817945e14dbe40d3b02 SHA1 9ea1da7b7ad039bb6c4bf17e9bb3744ae157855d SHA256 aafa343efa79630fae310f9025cd32617ac16b28e00eda9b7955a60d57b119bd
+EBUILD ttytter-0.9.7.ebuild 664 RMD160 0c00455309e1dfea6d45e7440eb280539ad1c525 SHA1 21e298a25acedfe44ae97a5c3d2c0d7c3c20e2e3 SHA256 5fa8901075e5e407b29a33f1ae2c4563d676a1c7f7427b6fb367e34de2951687
+EBUILD ttytter-0.9.9.ebuild 660 RMD160 c51bb35e30a41b0a14867d27d36455ac7b2b1230 SHA1 12cc52a10c947cd1aec858f9882302dcbfd5c9f2 SHA256 a2e868f27574b0c37999436fedca923fea45fc8d15cab933cf118e15404a7c56
+MISC ChangeLog 347 RMD160 b8fc321ca9066a90f38a3f1ca95459de4effb065 SHA1 dec24e162ae20e1176f1e816348b092db650ac47 SHA256 fdde2b24a861307cca16eebf941ce695cf13caf0511a9b81d11b05289af8d08e
+MISC metadata.xml 322 RMD160 84b785c57263d8906be10da9148538d172f0313b SHA1 d835241227d89a077aefaf57389c81c7f6755c19 SHA256 27473aa7a75d0af3b3de917dab1e419bec29999aae278ad061e176526a67f005
