@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2009; <anna@gentoo.org> ttytter-0.9.7.ebuild, ttytter-0.9.9.ebuild,
+  +metadata.xml:
+  Making repoman happy
+
   24 Nov 2009; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild:
   Fixing broken dependency specification
 
